force-app/main/default/objects/Campaign/fields/Activation_Type__c.field-meta.xml
<CustomField>
    <fullName>Activation_Type__c</fullName>
    <label>Activation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Demio</fullName>
            </value>
            <value>
                <fullName>Instagram Live</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>