force-app/main/default/objects/Campaign/fields/Actual_Reach__c.field-meta.xml
<CustomField>
    <fullName>Actual_Reach__c</fullName>
    <label>Actual Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>