force-app/main/default/objects/Campaign/fields/Advocacy_Effort__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Effort__c</fullName>
    <label>Advocacy Effort</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Rep</fullName>
            </value>
            <value>
                <fullName>Email Rep</fullName>
            </value>
            <value>
                <fullName>Phone2Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>