force-app/main/default/objects/Campaign/fields/Alliance_Mobilization_Type__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Mobilization_Type__c</fullName>
    <label>Alliance Mobilization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Public Speaking/Events</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Educating the Alliance</fullName>
            </value>
            <value>
                <fullName>Educating the Outdoor State</fullName>
            </value>
            <value>
                <fullName>Advocacy/Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>