force-app/main/default/objects/Campaign/fields/Alliance_Training__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alliance Training</label>
    <type>Checkbox</type>
</CustomField>