force-app/main/default/objects/Campaign/fields/Alliance_Training_Category__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Training_Category__c</fullName>
    <label>Alliance Training Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>Customized Coaching</fullName>
            </value>
            <value>
                <fullName>Semi-Structured Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>