force-app/main/default/objects/Campaign/fields/Alliance_Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Training_Type__c</fullName>
    <label>Alliance Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>POW 101/Climate Science</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Advocacy/Policy</fullName>
            </value>
            <value>
                <fullName>Story Development/Storytelling</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Creative RFP</fullName>
            </value>
            <value>
                <fullName>POW 101</fullName>
            </value>
            <value>
                <fullName>Climate Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>