force-app/main/default/objects/Campaign/fields/Anything_else__c.field-meta.xml
<CustomField>
    <fullName>Anything_else__c</fullName>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>