force-app/main/default/objects/Campaign/fields/ask_to_take_action__c.field-meta.xml
<CustomField>
    <fullName>ask_to_take_action__c</fullName>
    <label>Willing to share a call to action?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>