force-app/main/default/objects/Campaign/fields/Asset_Attached__c.field-meta.xml
<CustomField>
    <fullName>Asset_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Attached</label>
    <type>Checkbox</type>
</CustomField>