force-app/main/default/objects/Campaign/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description># of attendees for this event</description>
    <inlineHelpText># of attendees for this event</inlineHelpText>
    <label>Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>