force-app/main/default/objects/Campaign/fields/AV_Requirements__c.field-meta.xml
<CustomField>
    <fullName>AV_Requirements__c</fullName>
    <label>AV Requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>