force-app/main/default/objects/Campaign/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <externalId>true</externalId>
    <label>Campaign ID</label>
    <type>AutoNumber</type>
</CustomField>