force-app/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunistic Action</fullName>
            </value>
            <value>
                <fullName>Federal Policy</fullName>
            </value>
            <value>
                <fullName>State Policy</fullName>
            </value>
            <value>
                <fullName>High Impact/Decision Maker</fullName>
            </value>
            <value>
                <fullName>Civic Engagement/Election</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>