force-app/main/default/objects/Campaign/fields/COI_Requests__c.field-meta.xml
<CustomField>
    <fullName>COI_Requests__c</fullName>
    <label>COI Requests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>