force-app/main/default/objects/Campaign/fields/CTA_Details__c.field-meta.xml
<CustomField>
    <fullName>CTA_Details__c</fullName>
    <label>CTA Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>