force-app/main/default/objects/Campaign/fields/Digital_Platform__c.field-meta.xml
<CustomField>
    <fullName>Digital_Platform__c</fullName>
    <label>Digital Platform</label>
    <type>TextArea</type>
</CustomField>