force-app/main/default/objects/Campaign/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table Clothes</fullName>
            </value>
            <value>
                <fullName>Tent Topper/10x10</fullName>
            </value>
            <value>
                <fullName>6ft table</fullName>
            </value>
            <value>
                <fullName>Special Activation</fullName>
            </value>
            <value>
                <fullName>Raffle - only with speaker</fullName>
            </value>
            <value>
                <fullName>VR Headsets</fullName>
            </value>
            <value>
                <fullName>Giant Jenga</fullName>
            </value>
            <value>
                <fullName>Dip Jars?</fullName>
            </value>
            <value>
                <fullName>Give-always - Consumables</fullName>
            </value>
            <value>
                <fullName>Stickers</fullName>
            </value>
            <value>
                <fullName>Buttons</fullName>
            </value>
            <value>
                <fullName>Possibly new options</fullName>
            </value>
            <value>
                <fullName>Marketing Materials</fullName>
            </value>
            <value>
                <fullName>Postcards</fullName>
            </value>
            <value>
                <fullName>Posters</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>