force-app/main/default/objects/Campaign/fields/Event_Audience__c.field-meta.xml
<CustomField>
    <fullName>Event_Audience__c</fullName>
    <description>Who is the event targeted towards?</description>
    <inlineHelpText>Who is the event targeted towards?</inlineHelpText>
    <label>Event Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>