force-app/main/default/objects/Campaign/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Athlete Alliance</fullName>
                <label>Alliance</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Local Alliance</fullName>
            </value>
            <value>
                <fullName>Science Alliance</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>