force-app/main/default/objects/Campaign/fields/Event_Components__c.field-meta.xml
<CustomField>
    <fullName>Event_Components__c</fullName>
    <label>Event Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alliance Gathering</fullName>
            </value>
            <value>
                <fullName>Film Screening</fullName>
            </value>
            <value>
                <fullName>Film Toolkit</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Partner Product</fullName>
            </value>
            <value>
                <fullName>POW Merchandise</fullName>
            </value>
            <value>
                <fullName>Shout-Out</fullName>
            </value>
            <value>
                <fullName>Tabling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>