force-app/main/default/objects/Campaign/fields/Event_End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_and_Time__c</fullName>
    <label>Event End Date and Time</label>
    <type>DateTime</type>
</CustomField>