force-app/main/default/objects/Campaign/fields/Event_Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_and_Time__c</fullName>
    <label>Event Start Date and Time</label>
    <type>DateTime</type>
</CustomField>