force-app/main/default/objects/Campaign/fields/Free_Event__c.field-meta.xml
<CustomField>
    <fullName>Free_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pulled from Blackthorn Events to indicate the event is free</description>
    <inlineHelpText>Indicates the event was free</inlineHelpText>
    <label>Free Event</label>
    <type>Checkbox</type>
</CustomField>