force-app/main/default/objects/Campaign/fields/Fundraising_Type__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Type__c</fullName>
    <label>Fundraising Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giveaway/Sweepstakes</fullName>
            </value>
            <value>
                <fullName>Peer-to-Peer</fullName>
            </value>
            <value>
                <fullName>Partner Fundraiser</fullName>
            </value>
            <value>
                <fullName>General Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>