force-app/main/default/objects/Campaign/fields/General_Equipment__c.field-meta.xml
<CustomField>
    <fullName>General_Equipment__c</fullName>
    <label>General Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table Cloths</fullName>
            </value>
            <value>
                <fullName>Tent Topper/Frame</fullName>
            </value>
            <value>
                <fullName>6ft Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>