force-app/main/default/objects/Campaign/fields/Giveaways__c.field-meta.xml
<CustomField>
    <fullName>Giveaways__c</fullName>
    <label>Giveaways</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stickers</fullName>
            </value>
            <value>
                <fullName>Buttons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>