force-app/main/default/objects/Campaign/fields/GW_Volunteers__Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
    <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
    <label>Number of Volunteers</label>
    <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
    <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>