force-app/main/default/objects/Campaign/fields/HL_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>HL_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>HL Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>