force-app/main/default/objects/Campaign/fields/HL_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>HL_Event_Type__c</fullName>
    <label>HL Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chapter Meeting</fullName>
            </value>
            <value>
                <fullName>Community Event</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>