force-app/main/default/objects/Campaign/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POW Hosted</fullName>
            </value>
            <value>
                <fullName>Community Hosted</fullName>
            </value>
            <value>
                <fullName>Alliance Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>