force-app/main/default/objects/Campaign/fields/Host_Email__c.field-meta.xml
<CustomField>
    <fullName>Host_Email__c</fullName>
    <label>Host Email</label>
    <type>Email</type>
</CustomField>