force-app/main/default/objects/Campaign/fields/How_many_people_took_action__c.field-meta.xml
<CustomField>
    <fullName>How_many_people_took_action__c</fullName>
    <label>How many people took action?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>