force-app/main/default/objects/Campaign/fields/Liquor_License_Requested__c.field-meta.xml
<CustomField>
    <fullName>Liquor_License_Requested__c</fullName>
    <label>Liquor License Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>