force-app/main/default/objects/Campaign/fields/Lodging_Needed__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lodging Needed?</label>
    <type>Checkbox</type>
</CustomField>