force-app/main/default/objects/Campaign/fields/Marketing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials__c</fullName>
    <label>Marketing Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postcards</fullName>
            </value>
            <value>
                <fullName>Posters</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>