force-app/main/default/objects/Campaign/fields/Membership_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Campaign_Type__c</fullName>
    <label>Membership Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Merch Purchase</fullName>
            </value>
            <value>
                <fullName>POW Opt-In</fullName>
            </value>
            <value>
                <fullName>Partner Opt-In</fullName>
            </value>
            <value>
                <fullName>Event Attendee</fullName>
            </value>
            <value>
                <fullName>Advocacy Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>