force-app/main/default/objects/Campaign/fields/of_CTA_s_Taken__c.field-meta.xml
<CustomField>
    <fullName>of_CTA_s_Taken__c</fullName>
    <label># of CTA&apos;s Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>