force-app/main/default/objects/Campaign/fields/OKR_Type__c.field-meta.xml
<CustomField>
    <fullName>OKR_Type__c</fullName>
    <label>OKR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruit</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Mobilize</fullName>
            </value>
            <value>
                <fullName>Fundraise</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>