force-app/main/default/objects/Campaign/fields/OKR_Win_Loss__c.field-meta.xml
<CustomField>
    <fullName>OKR_Win_Loss__c</fullName>
    <label>OKR Win/Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>