force-app/main/default/objects/Campaign/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Onsite Contact)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>