force-app/main/default/objects/Campaign/fields/P2A__Admin_ID__c.field-meta.xml
<CustomField>
    <fullName>P2A__Admin_ID__c</fullName>
    <formula>IF(
OR(
ISBLANK(P2A__External_Campaign_ID__c),
LEN(TEXT(P2A__External_Campaign_ID__c))&lt;5
),
&apos;&apos;,
MID(TEXT(P2A__External_Campaign_ID__c), 3, LEN(TEXT(P2A__External_Campaign_ID__c))-5)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capitol Canary Admin ID</label>
    <type>Text</type>
</CustomField>