force-app/main/default/objects/Campaign/fields/P2A__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>P2A__Created_Date__c</fullName>
    <label>Campaign Created Date</label>
    <type>DateTime</type>
</CustomField>