force-app/main/default/objects/Campaign/fields/P2A__External_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>P2A__External_Campaign_ID__c</fullName>
    <description>The Campaign ID in Capitol Canary</description>
    <externalId>true</externalId>
    <label>External Campaign ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>