force-app/main/default/objects/Campaign/fields/P2A__Issue__c.field-meta.xml
<CustomField>
    <fullName>P2A__Issue__c</fullName>
    <label>Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>