force-app/main/default/objects/Campaign/fields/P2A__p2a_object_type__c.field-meta.xml
<CustomField>
    <fullName>P2A__p2a_object_type__c</fullName>
    <description>The object type in Capitol Canary</description>
    <label>Capitol Canary Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>