force-app/main/default/objects/Campaign/fields/P2A__Synced__c.field-meta.xml
<CustomField>
    <fullName>P2A__Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this record has been synced with Capitol Canary</description>
    <inlineHelpText>Indicates if this record has been synced with Phone2Action</inlineHelpText>
    <label>Synced with Capitol Canary</label>
    <type>Checkbox</type>
</CustomField>