force-app/main/default/objects/Campaign/fields/Raffle_Items_Requested__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Items_Requested__c</fullName>
    <label>Raffle Items Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small items</fullName>
            </value>
            <value>
                <fullName>POW items</fullName>
            </value>
            <value>
                <fullName>Large items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>