force-app/main/default/objects/Campaign/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <description># of people registered for this event</description>
    <inlineHelpText># of people registered for this event</inlineHelpText>
    <label>Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>