force-app/main/default/objects/Campaign/fields/Related_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account #2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Related Account #2)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>