force-app/main/default/objects/Campaign/fields/Related_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account #3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Related Account #3)</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>