force-app/main/default/objects/Campaign/fields/Set_Up_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Date_and_Time__c</fullName>
    <label>Set-Up Date and Time</label>
    <type>DateTime</type>
</CustomField>