force-app/main/default/objects/Campaign/fields/Speaker_2__c.field-meta.xml
<CustomField>
    <fullName>Speaker_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Speaker #2)</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>