force-app/main/default/objects/Campaign/fields/Speaker_3__c.field-meta.xml
<CustomField>
    <fullName>Speaker_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Speaker #3)</relationshipLabel>
    <relationshipName>Campaigns3</relationshipName>
    <type>Lookup</type>
</CustomField>