force-app/main/default/objects/Campaign/fields/Speaker_4__c.field-meta.xml
<CustomField>
    <fullName>Speaker_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker #4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Speaker #4)</relationshipLabel>
    <relationshipName>Campaigns4</relationshipName>
    <type>Lookup</type>
</CustomField>